--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, initial-scale=1">
 
     <!-- title -->
-    <title>Al Amrain</title>
+    <title>Darul Amrain Center</title>
 
     <!-- favicon -->
     <link href="assets/img/favicon.png" type="image/png" rel="icon">
