--- a/team.html
+++ b/team.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, initial-scale=1">
 
     <!-- title -->
-    <title>Al Amrain</title>
+    <title>Darul Amrain Center</title>
 
     <!-- favicon -->
     <link href="assets/img/favicon.png" type="image/png" rel="icon">
@@ -82,7 +82,7 @@
                     <h2>Team Member</h2>
                 </div>
                 <div class="row mt_50">
-                    <div class="col-lg-4 mt_20">
+                    <div class="col-lg-4 col-md-6 mt_20">
                         <div class="team-member-item">
                             <div class="team-image">
                                 <figure class="image-anime">
@@ -107,7 +107,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 mt_20">
+                    <div class="col-lg-4 col-md-6 mt_20">
                         <div class="team-member-item">
                             <div class="team-image">
                                 <figure class="image-anime">
@@ -132,7 +132,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 mt_20">
+                    <div class="col-lg-4 col-md-6 mt_20">
                         <div class="team-member-item">
                             <div class="team-image">
                                 <figure class="image-anime">
@@ -157,7 +157,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 mt_20">
+                    <div class="col-lg-4 col-md-6 mt_20">
                         <div class="team-member-item">
                             <div class="team-image">
                                 <figure class="image-anime">
@@ -182,7 +182,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 mt_20">
+                    <div class="col-lg-4 col-md-6 mt_20">
                         <div class="team-member-item">
                             <div class="team-image">
                                 <figure class="image-anime">
@@ -207,7 +207,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 mt_20">
+                    <div class="col-lg-4 col-md-6 mt_20">
                         <div class="team-member-item">
                             <div class="team-image">
                                 <figure class="image-anime">
