--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Darul Amrain Center</title>
 
     <!-- favicon -->
-    <link href="assets/img/favicon.png" type="image/png" rel="icon">
+    <link href="assets/img/favicon.png" type="" rel="icon">
 
     <!-- all css here -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
@@ -143,6 +143,16 @@
                 </div>
             </div>
          </div>
+         <!-- video_area -->
+          <div class="video_area">
+            <div class="container">
+                <div class="video_wrapper video position-relative" style="background-image: url(assets/img/video.png);">
+                    <a href="https://www.youtube.com/watch?v=xKxrkht7CpY" id="play-video">
+                        <i class="fas fa-play-circle"></i>
+                    </a>
+                </div>
+            </div>
+          </div>
          <!-- guide_area -->
           <div class="guide_area">
             <div class="container">
@@ -193,6 +203,30 @@
                 </div>
             </div>
           </div>
+          <!-- namaz_area -->
+           <div class="namaz_area">
+            <div class="container">
+                <div class="row justify-content-between align-items-center">
+                    <div class="col-lg-5 mt_50">
+                        <div class="namaz_wrapper" style="background-image: url(assets/img/darul-shape.png);">
+                            <h2>Prayer Time</h2>
+                            <ul>
+                                <li>Fajr………………………04:45 am</li>
+                                <li>Dhuhr……………………01:30 am</li>
+                                <li>Asr………………….....…06:45 am</li>
+                                <li>Maghrib…………....……05:53 pm</li>
+                                <li>Isha………………….......08:04 pm</li>
+                                <li>Jummah.…...……………04:45 pm</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-lg-5 mt_50">
+                        <img src="assets/img/tq-service-img2.png" alt="" class="w-100">
+                    </div>
+                </div>
+                
+            </div>
+           </div>
         <!-- services_area -->
         <div class="services_area pt_70 pb_50">
             <div class="container">
@@ -216,10 +250,8 @@
                     </div>
                     <div class="col-lg-6 mt_50">
                         <div class="video position-relative">
-                            <a  href="https://www.youtube.com/watch?v=xKxrkht7CpY" id="play-video">
-                                <i class="fas fa-play-circle"></i>
-                            </a>
-                            <img src="assets/img/video-img.jpg" alt="img">
+                            <img src="assets/img/circle-img.png" alt="" class="cirle_poss">
+                            <img src="assets/img/video-img.jpg" alt="img" class="">
                         </div>
                     </div>
                     <div class="col-lg-3 mt_50">
