contact page style add

--- a/donate.html
+++ b/donate.html
@@ -25,7 +25,7 @@
 </head>
 <body>
     <!-- Preloader Start -->
-    <!-- <div id="preloader"> 
+    <div id="preloader"> 
         <div class="book">
             <div class="inner">
                 <div class="left"></div>
@@ -53,7 +53,8 @@
                 <li></li>
             </ul>
         </div>
-    </div> -->
+    </div> 
+
     <header>
         <div class="container">
             <div class="d-flex justify-content-between align-items-center">
@@ -107,45 +108,35 @@
     <!-- donate_area -->
      <div class="donate_area">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-6 mt_50">
-                    <div class="donate_from_cart">
-                        <div class="bank_wrap">
-                            <img src="assets/img/Bank.png" alt="">
-                            <ul>
-                                <li>Name- MOTIUR RAHMAN</li>
-                                <li><strong>AC No-</strong> 20503830200444418</li>
-                                <li>Branch- Sonargaon janapath Road</li>
-                                <li>Islami Bank Bangladesh Ltd </li>
-                            </ul>
-                        </div>
-                        <img src="assets/img/line.png" alt="" class="w-100">
-                        <div class="bkash_wrap">
-                            <img src="assets/img/bkash.png" alt="">
-                            <ul>
-                                <li><strong>Bkash No-</strong> 01648888163</li>
-                            </ul>
-                        </div>
-                        <img src="assets/img/line.png" alt="" class="w-100">
-                        <div class="bkash_wrap">
-                            <img src="assets/img/nagad.jpg" alt="">
-                            <ul>
-                                <li><strong>Nagad No-</strong> 01648888163</li>
-                            </ul>
-                        </div>
+            <div class="text-center">
+                <img src="assets/img/contact_shape.png" alt="" class="contact_shape">
+            </div>
+            <div class="donate_wrapper" style="background-image: url(assets/img/contact_bg.png);">
+                <h2>Support us, we need your help.</h2>
+                <div class="donate_from_cart">
+                    <div class="bank_wrap">
+                        <img src="assets/img/Bank.png" alt="">
+                        <ul>
+                            <li>Name- MOTIUR RAHMAN</li>
+                            <li><strong>AC No-</strong> 20503830200444418</li>
+                            <li>Branch- Sonargaon janapath Road</li>
+                            <li>Islami Bank Bangladesh Ltd </li>
+                        </ul>
                     </div>
-                </div>
-                <div class="col-lg-6 mt_50">
-                    <form action="#" class="donate_from_cart">
-                        <select>
-                            <option>Islami Bank Bangladesh Ltd</option>
-                            <option>Bkash</option>
-                            <option>Nagad</option>
-                        </select>
-                        <input class="input" type="text" placeholder="Transaction Id">
-                        <input class="input" type="number" placeholder="Amount">
-                        <button class="button">Submit</button>
-                    </form>
+                    <img src="assets/img/line.png" alt="" class="w-100 donate_line">
+                    <div class="bkash_wrap">
+                        <img src="assets/img/bkash.png" alt="">
+                        <ul>
+                            <li><strong>Bkash No-</strong> 01648888163</li>
+                        </ul>
+                    </div>
+                    <img src="assets/img/line.png" alt="" class="w-100 donate_line">
+                    <div class="bkash_wrap">
+                        <img src="assets/img/nagad.jpg" alt="">
+                        <ul>
+                            <li><strong>Nagad No-</strong> 01648888163</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
