--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,37 @@
     <link href="assets/css/responsive.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-
+    <!-- preloader -->
+    <div id="preloader"> 
+        <div class="book">
+            <div class="inner">
+                <div class="left"></div>
+                <div class="middle"></div>
+                <div class="right"></div>
+            </div>
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
+    </div>
+    
     <header>
         <div class="container">
             <div class="d-flex justify-content-between align-items-center">
@@ -83,32 +113,7 @@
                     <p>Help and guide you</p>
                     <h2>Dont Be a Stranger Just Say Hello</h2>
                 </div>
-                <div class="row mt_50">
-                    <div class="col-lg-7 mt_50">
-                        <form action="#" class="donate_from_cart">
-                            <div class="row">
-                                <div class="col-lg-6">
-                                    <input type="text" placeholder="Full Name">
-                                </div>
-                                <div class="col-lg-6">
-                                    <input type="email" placeholder="Email Address">
-                                </div>
-                                <div class="col-lg-6">
-                                    <input type="number" placeholder="Phone No">
-                                </div>
-                                <div class="col-lg-6">
-                                    <input type="text" placeholder="Subject">
-                                </div>
-                                <div class="col-lg-12">
-                                    <textarea placeholder="Your Message"></textarea>
-                                </div>
-                                <div class="col-lg-6">
-                                    <button class="button">Send Message</button>
-                                </div>
-                            </div>
-                            
-                        </form>
-                    </div>
+                <div class="row align-items-center justify-content-between mt_50">
                     <div class="col-lg-5 mt_50">
                         <div class="contact-us">
                             <div>
@@ -139,6 +144,9 @@
                                 <img src="assets/img/cont-3.svg" alt="">
                             </i>
                         </div>
+                    </div>
+                    <div class="col-lg-7 mt_50">
+                       <img src="assets/img/contact_img.jpg" alt="" class="img-fluid">
                     </div>
                 </div>
 
