--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
     <!-- Preloader Start -->
-    <!-- <div id="preloader"> 
+    <div id="preloader"> 
         <div class="book">
             <div class="inner">
                 <div class="left"></div>
@@ -53,7 +53,8 @@
                 <li></li>
             </ul>
         </div>
-    </div> -->
+    </div>
+    <!-- header_area -->
     <header>
         <div class="container">
             <div class="d-flex justify-content-between align-items-center">
@@ -72,10 +73,10 @@
                                 <a href="project.html">Projects</a>
                                 <ul>
                                     <li><a href="#">Al Amrain Institute</a></li>
-                                    <li><a href="#">Madani Talimul Quran Board</a></li>
+                                    <li><a href="https://mtquran.org/" target="_blank">Madani Talimul Quran Board</a></li>
                                     <li><a href="#">Darul Hadith Bangladesh</a></li>
-                                    <li><a href="#">Quranic World</a></li>
-                                    <li><a href="#">Al Amrain Hazz Group</a></li>
+                                    <li><a href="https://www.quranicworld.org/" target="_blank">Quranic World</a></li>
+                                    <li><a href="https://hasanahhajjgroup.com/" target="_blank">Al Amrain Hazz Group</a></li>
                                 </ul>
                             </li>                              
                             <li><a href="gallery.html">Gallery</a></li>         
