--- a/project.html
+++ b/project.html
@@ -25,7 +25,7 @@
 </head>
 <body>
     <!-- Preloader Start -->
-    <!-- <div id="preloader"> 
+    <div id="preloader"> 
         <div class="book">
             <div class="inner">
                 <div class="left"></div>
@@ -53,7 +53,7 @@
                 <li></li>
             </ul>
         </div>
-    </div> -->
+    </div>
     <header>
         <div class="container">
             <div class="d-flex justify-content-between align-items-center">
