--- a/team.html
+++ b/team.html
@@ -24,6 +24,38 @@
     <link href="assets/css/responsive.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
+    <!-- preloader -->
+    <div id="preloader"> 
+        <div class="book">
+            <div class="inner">
+                <div class="left"></div>
+                <div class="middle"></div>
+                <div class="right"></div>
+            </div>
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
+    </div>
+
+
     <header>
         <div class="container">
             <div class="d-flex justify-content-between align-items-center">
